--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np;\n",
-    "import math;       "
+    "import math;\n",
+    "import random;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,59 +33,81 @@
     "            return True;\n",
     "        else:\n",
     "            return False;\n",
-    "        s\n",
+    "        \n",
     "    def getCurrentState(self):\n",
-    "        return self.currentState;    \n",
+    "        return self.currentState;\n",
     "    \n",
     "    def setCurrentState(self, state):\n",
     "        self.currentState = state;\n",
     "        \n",
+    "    def measure(self, iterations = 100):\n",
+    "        prob0 = abs(self.currentState[0] ** 2);\n",
+    "        prob1 = abs(self.currentState[1] ** 2);\n",
+    "        print(prob1);\n",
+    "        distribution = [0, 0];\n",
+    "        for i in range(iterations):\n",
+    "            if (random.uniform(0, 1) > prob1):\n",
+    "                distribution[0] += 1;\n",
+    "            else:\n",
+    "                distribution[1] += 1;\n",
+    "                \n",
+    "        print(distribution);\n",
+    "        \n",
     "class Gate():\n",
-    "    def __init__(self, transformation = np.mat('1 0; 0 1', dtype = complex)):\n",
+    "    def __init__(self, transformation = np.mat('0 1; 1 0', dtype = complex)):\n",
     "        print(\"Creating a new gate\");\n",
     "        self.transformation = transformation;\n",
     "        \n",
     "    def processQubit(self, qubit):\n",
-    "        print(qubit.getInitialState());\n",
-    "        qubit.setCurrentState(np.matmul(self.transformation, qubit.getCurrentState()));\n",
-    "        # applies some linear algebra\n",
-    "        # returns some result.\n",
+    "        print((qubit.getCurrentState()));\n",
+    "        qubit.setCurrentState(np.asarray(self.transformation.dot(qubit.getCurrentState()))[0]);\n",
     "        print(qubit.getCurrentState());\n",
+    "        \n",
+    "class HadamardGate(Gate):\n",
+    "    def __init__(self):\n",
+    "        Gate.__init__(self, 1/math.sqrt(2)*np.mat('1 1; 1 -1', dtype = complex));\n",
+    "        print(\"Creating a hadamard gate\");\n",
     "        \n",
     "class PauliXGate(Gate):\n",
     "    def __init__(self):\n",
     "        Gate.__init__(self, np.mat('0 1; 1 0', dtype = complex));\n",
     "        print(\"Creating a pauli-x gate\");\n",
     "        \n",
-    "class HadamardGate(Gate):\n",
+    "class PauliYGate(Gate):\n",
     "    def __init__(self):\n",
-    "        Gate.__init__(self, 1/math.sqrt(2)*np.mat('1 1; 1 -1', dtype = complex));\n",
+    "        Gate.__init__(self, np.mat('0 -1j; 1j 0', dtype = complex));\n",
     "        print(\"Creating a hadamard gate\");\n",
-    "        "
+    "        \n",
+    "class PauliZGate(Gate):\n",
+    "    def __init__(self):\n",
+    "        Gate.__init__(self, np.mat('1 0; 0 -1', dtype = complex));\n",
+    "        print(\"Creating a hadamard gate\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "Does not meet normalization constraint.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-66-63f19e171469>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mqubit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQubit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcomplex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmyGate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHadamardGate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmyGate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocessQubit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqubit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-64-d9aac5889bed>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, initialState)\u001b[0m\n\u001b[1;32m      5\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcurrentState\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minitialState\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Does not meet normalization constraint.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mgetInitialState\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: Does not meet normalization constraint."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating a new gate\n",
+      "Creating a hadamard gate\n",
+      "[0.+0.j 1.+0.j]\n",
+      "[ 0.+0.j -1.+0.j]\n",
+      "1.0\n",
+      "[0, 5000]\n"
      ]
     }
    ],
    "source": [
-    "qubit = Qubit(np.array([1,1], dtype=complex));\n",
-    "myGate = HadamardGate();\n",
-    "myGate.processQubit(qubit);"
+    "qubit = Qubit(np.array([0,1], dtype=complex));\n",
+    "myGate = PauliZGate();\n",
+    "myGate.processQubit(qubit);\n",
+    "\n",
+    "qubit.measure(5000);"
    ]
   },
   {
