feat(polarizer_simulator): polarizer_simulator working

--- a/projects/qc_simulator/qc_simulator.ipynb
+++ b/projects/qc_simulator/qc_simulator.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 233,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np;\n",
@@ -13,8 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Qubit():\n",
@@ -54,7 +58,7 @@
     "        print(distribution);\n",
     "        \n",
     "class Gate():\n",
-    "    def __init__(self, transformation = np.mat('0 1; 1 0', dtype = complex)):\n",
+    "    def __init__(self, transformation = np.mat('1 0; 0 1', dtype = complex)):\n",
     "        print(\"Creating a new gate\");\n",
     "        self.transformation = transformation;\n",
     "        \n",
@@ -86,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,53 +99,48 @@
      "text": [
       "Creating a new gate\n",
       "Creating a hadamard gate\n",
-      "[0.+0.j 1.+0.j]\n",
-      "[ 0.+0.j -1.+0.j]\n",
-      "1.0\n",
-      "[0, 5000]\n"
+      "[ 0.+0.j  1.+0.j]\n",
+      "[ 0.70710678+0.j -0.70710678+0.j]\n",
+      "0.5\n",
+      "[45, 55]\n"
      ]
     }
    ],
    "source": [
     "qubit = Qubit(np.array([0,1], dtype=complex));\n",
-    "myGate = PauliZGate();\n",
+    "myGate = HadamardGate();\n",
     "myGate.processQubit(qubit);\n",
     "\n",
-    "qubit.measure(5000);"
+    "qubit.measure();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
